// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Margin matches snapshot when has a different size on each side 1`] = `
.emotion-0 {
  margin: 24px;
  margin: 0;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    margin: 0;
  }
}

<div
  className="undefined emotion-0"
>
  Content
</div>
`;

exports[`Margin matches snapshot when has a size only on 1 side 1`] = `
.emotion-0 {
  margin: 24px;
  margin: 0;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    margin: 0;
  }
}

<div
  className="emotion-0"
>
  Content
</div>
`;

exports[`Margin matches snapshot when has a uniform size 1`] = `
.emotion-0 {
  margin: 24px;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    margin: 16px;
  }
}

<div
  className="emotion-0"
>
  Content
</div>
`;

exports[`Margin matches snapshot when has vertical and horizontal sizes 1`] = `
.emotion-0 {
  margin: 24px;
  margin: 0;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    margin: 16px;
  }
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    margin: 0;
  }
}

<div
  className="undefined emotion-0"
>
  Content
</div>
`;
